# QwikMosquitto

./: .gitignore  README.md  deleteme  flake.nix
backend/: .env.example  Cargo.toml
backend/src/: main.rs
nix/modules/: mosquitto.nix  mqtt-recorder.nix  postgres.nix
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: entry.dev.tsx  entry.preview.tsx  entry.ssr.tsx  root.tsx
web/src/routes/: index.tsx
